# fast-paint-by-numbers

./: .gitignore  Cargo.toml  LICENSE.txt  README-zh-CN-translation.md  README.md  package.json  tsconfig.base.json
.github/workflows/: deploy.yml  release-cli.yml
benchmarks/: run_our_benchmark.js
crates/pbn-cli/: Cargo.toml
crates/pbn-cli/src/: main.rs
crates/pbn-core/: Cargo.toml
crates/pbn-core/src/: contours.rs  debug_render.rs  labels.rs  lib.rs  logger.rs  models.rs  palette.rs  pipeline.rs  quantize.rs  reduction.rs  regions.rs  render.rs  wasm.rs
scripts/: benchmark-optimized.ps1  browser-smoke.ps1  build-sdk-wasm.ps1  compare-baseline-summaries.ps1  generate-optimized-baseline.ps1  serve-web-demo.mjs  serve-web-demo.ps1  verify-legacy-baseline.ps1
